--- a/Esra.Web/Views/SalaryScale/Details.cshtml
+++ b/Esra.Web/Views/SalaryScale/Details.cshtml
@@ -27,22 +27,32 @@
             var availableTitleCodes = [];
             var availableTitles = [];
 
-            $($("#titlecode-drop-down")[0].options).each(function (i, val) {
-                availableTitleCodes[i] = $(val).val();
-            });
+            //            $($("#titlecode-drop-down")[0].options).each(function (i, val) {
+            //                availableTitleCodes[i] = $(val).val();
+            //            });
 
             $($("#title-drop-down")[0].options).each(function (i, val) {
                 availableTitles[i] = $(val).text();
+                availableTitleCodes[i] = $(val).val();
             });
 
-            $("#titlecode-drop-down").combobox({
+            //            $("#titlecode-drop-down").combobox({
+            //                source: availableTitleCodes,
+            //                delay: 0,
+            //                selected: function (event, ui) {
+            //                    // Event handling code goes here.
+            //                    $(this).parents('form').submit();
+            //                }
+            //            }); // combobox });
+
+            $("input#titlecode-textbox").autocomplete({
                 source: availableTitleCodes,
                 delay: 0,
                 selected: function (event, ui) {
                     // Event handling code goes here.
                     $(this).parents('form').submit();
                 }
-            }); // combobox });
+            }); // autocomplete });
 
             $("#title-drop-down").combobox({
                 source: availableTitles,
