--- a/Esra.Web/Views/SalaryScale/Index.cshtml
+++ b/Esra.Web/Views/SalaryScale/Index.cshtml
@@ -22,6 +22,8 @@
             $($("#title-drop-down")[0].options).each(function (i, val) {
                 availableTitles[i] = $(val).text();
                 availableTitleCodes[i] = $(val).val();
+                availableTitleCodes.sort();
+
             });
 
             //            $("#titlecode-drop-down").combobox({
@@ -49,9 +51,10 @@
             $("input#titlecode-textbox").autocomplete({
                 source: availableTitleCodes,
                 delay: 0,
-                selected: function (event, ui) {
-                    debugger;
+                select: function (event, ui) {
+                    //debugger;
                     // Event handling code goes here.
+                    $(this).val(ui.item.value); // set the text box's value to that selected from the list
                     $(this).parents('form').submit();
                 } // selected
             });
