--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <script src="@Url.Script("jquery.ui.combobox.js")" type="text/javascript"></script>
     @*<link href="@Url.Css("combobox-style.css")" rel="stylesheet" type="text/css" />*@
     @*<script type="text/javascript" src="../../Scripts/jquery.combobox.js"></script>*@
+    <script src="@Url.Script("jquery.fn.sortElements.js")" type="text/javascript"></script>
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
