--- a/Esra.Web/Views/SalaryScale/Details.cshtml
+++ b/Esra.Web/Views/SalaryScale/Details.cshtml
@@ -76,6 +76,10 @@
             //            //debugger;
             //            $(this).parents('form').submit();
             //        });
+
+            $("#toggle").click(function () {
+                $("#title-drop-down").toggle();
+            });
         });
     </script>
 </div>
