--- a/Esra.Web/Views/SalaryScale/Index.cshtml
+++ b/Esra.Web/Views/SalaryScale/Index.cshtml
@@ -59,6 +59,10 @@
                 } // selected
             });
 
+            $("#toggle").click(function () {
+                $("#title-drop-down").toggle();
+            });
+
         });
 
 //-->
