--- a/Esra.Web/Views/Shared/_SalaryScaleSelectLists.cshtml
+++ b/Esra.Web/Views/Shared/_SalaryScaleSelectLists.cshtml
@@ -28,7 +28,7 @@
             </ul> // end SelectTitleForm
 
         }
-        <button id="toggle">
-            Show underlying select</button>
+        @*<button id="toggle">
+            Show underlying select</button>*@
     </fieldset>
 </div>
